# Agenda-Aeronautas

./: CORREÇÕES PENDENTES.rtf  Instruções POETRY.txt  PROMPT para LER ARQUIVO PDF SABRE AZUL.docx  README.md  Tarefas pendentes.xlsx  pyproject.toml  ~$OMPT para LER ARQUIVO PDF SABRE AZUL.docx  ~$Tarefas pendentes.xlsx
Codigo_Fonte/Modulos_Comuns/: # FUNÇÃO PARA DETERMINAR DIRETORIO DE AR.py  ADICIONA SUFIXO NA COLUNA Id_Leg CRIADA 19082025.py  ADICIONA SUFIXO NAS PERNAS DE VOO -FINAL.py  AEROPORTOS MUNDIAIS.py  CALCULO DE VALORES BÁSICOS -FINAL.py  CALCULOS FINAIS - FINAL - COM PROGRESSO - FINAL.py  CALCULOS VALORES FINAIS 19082025.py  CALCULOS_FINAIS_JUPYTER_14082025_WINSAFE_definitivo.py  CALCULOS_FINAIS_JUPYTER_18082025_OK.py  CALCULOS_VALORES_INICIAIS_19082025.py  COMPOEM Checkin e Checkout 19082025.py  CRIA ARQUIVO TIPOS RESERVAS.py  CRIA DATAFRAME COM TODOS AS COLUNAS EM TIMEDELTA E CALCULOS - FINAL 04072025.py  Criar diretorio Spectrum.py  DEG CAPTURA DIRETORIO E ARQUIVO E GERA ARQUIVO FINAL.py  EscolherDiretorio_Arquivo e Gravar Arquivo.txt  GERA RELATORIO HORAS APOS CORTE -FINAL.py  GERA RELATORIO HORAS APRESENTACAO -FINAL.py  GERA RELATORIO HORAS EM SOLO ENTRE ETAPAS -FINAL.py  GERA RELATÓRIO DAS JORNADAS SEMANAIS E MENSAIS -FINAL.py  GERA RELATÓRIO HORAS DE PLANTÃO.py  GERA RELATÓRIO HORAS DE REPOUSO -FINAL.py  GERA RELATÓRIO HORAS DE REPOUSO EXTRA -FINAL.py  GERA RELATÓRIO HORAS DE RESERVA.py  GERA RELATÓRIO HORAS EM TREINAMENTO -FINAL.py  IMPORTA ESCALA PDF SABRE AZUL 19082025.py  IMPORTA ESCALA PDF SIMPLIFICADA AZUL 19082025.py  IMPORTA ESCALA SABRE AZUL.py  (+5 more)
(+560 files in other folders)
